objects/echosign_dev1__Environment_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>echosign_dev1__Config_API_URL__c</fullName>
        <label>Config API URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Config_URL__c</fullName>
        <label>Config URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Environment_Name__c</fullName>
        <description>Set to Production, Stage, Preview or Demo. Leave blank to stay on production.</description>
        <inlineHelpText>Set to Production, Stage, Preview or Demo. Leave blank to stay on production.</inlineHelpText>
        <label>Environment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EchoSign Environment Settings</label>
</CustomObject>